--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,4 +3,4 @@ project(ca_hw3)
 
 set(CMAKE_CXX_STANDARD 14)
 
-add_executable(ca_hw3 dflow_calc-skeleton.c dflow_calc.h dflow_main.c tree.cpp tree.h treeElement.cpp treeElement.h)
+add_executable(ca_hw3 dflow_calc-skeleton.c dflow_calc.h dflow_main.c tree.cpp tree.h)
