--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,4 +3,4 @@ project(ca_hw3)
 
 set(CMAKE_CXX_STANDARD 14)
 
-add_executable(ca_hw3 dflow_calc.cpp dflow_calc.h dflow_main.c)
+add_executable(ca_hw3 dflow_calc.cpp dflow_calc.h dflow_main.c dflow_calc.cpp)
